# transcriber-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
.pi/skills/vertical-slice-workflow/: SKILL.md
ai/docs/: README.md  architecture-specification.md  functional-specification.md  vertical-slice-implementation-plan.md
ai/docs/architecture/: 01-purpose-and-goals.md  02-runtime-architecture.md  03-layered-architecture.md  04-project-structure.md  05-api-architecture.md  06-application-service-architecture.md  07-domain-model.md  08-database-architecture.md  09-repository-architecture.md  10-storage-architecture.md  11-transcriber-architecture.md  12-worker-architecture.md  13-settings-architecture.md  14-time-architecture.md  15-validation-architecture.md  16-logging-architecture.md  17-health-check-architecture.md  18-docker-architecture.md  19-dependency-and-quality-architecture.md  20-testing-architecture.md  21-ci-and-branching-architecture.md  (+3 more)
alembic/: env.py
alembic/versions/: d8fc8cf22a91_create_transcription_jobs_table.py
app/: main.py  settings.py
app/api/: dependencies.py
app/domain/: enums.py
app/worker/: main.py
data/: app.db
tests/: conftest.py  fakes.py
tests/api/: conftest.py  test_app.py  test_create_transcription_job.py  test_get_transcription_job.py  test_health.py  test_list_transcription_jobs.py
tests/integration/: test_faster_whisper_transcriber.py  test_faster_whisper_transcriber_gpu.py
tests/unit/: test_faster_whisper_transcriber.py  test_settings.py  test_time.py  test_transcription_job_repository.py  test_transcription_service_basic.py
tests/worker/: test_process_job.py  test_worker_claiming.py
(+50 files in other folders)
