[project]
name = 'transcriber-service'
version = '0.1.0'
description = 'Internal REST API for asynchronous audio transcription using Faster Whisper.'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
    'fastapi',
    'uvicorn',
    'sqlalchemy',
    'alembic',
    'pydantic-settings',
    'python-multipart',
    'faster-whisper',
]

[project.optional-dependencies]
dev = ['pytest', 'pytest-asyncio', 'httpx', 'ruff', 'pytest-cov']

[tool.ruff]
target-version = 'py313'
line-length = 80

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.lint.per-file-ignores]
'tests/**' = ['PLR2004', 'PLR6301']

[tool.ruff.format]
preview = true
quote-style = 'single'
