[project]
name = 'transcriber-service'
version = '0.1.0'
description = 'Internal REST API for asynchronous audio transcription using Faster Whisper.'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
    "fastapi[standard]",
    'uvicorn',
    'sqlalchemy',
    'alembic',
    'pydantic-settings',
    'python-multipart',
    'faster-whisper',
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-asyncio',
    'ruff',
    'pytest-cov',
    "httpx2>=2.4.0",
]

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    'integration: marks tests that require a real Faster Whisper model (model download required).',
]

[tool.ruff]
target-version = 'py313'
line-length = 80

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.lint.per-file-ignores]
'tests/**' = ['PLR2004', 'PLR6301']

[tool.ruff.format]
preview = true
quote-style = 'single'
